@@ -1,6 +1,10 @@
 Changes from jTDS 1.0
 =======================
 
+02/05/2005 - Alin Sinpalean
+ o Applied patch [117010] Instance parameter support for local named pipes,
+   submitted by Matthias Germann.
+
 02/04/2005 - Alin Sinpalean
  o Applied Mike's fix for bugs [1116113] (SSL fails to build or run under java
    1.3) and [1102505] (SSL Resume Failure). TLS resume is now disabled
